--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ ul {
   margin-top: 20px;
 }
 
+.highlight {
+  font-weight: bold;
+}
+
 /* Header/Navbar */
 
 .main-header {
@@ -395,7 +399,7 @@ footer ul li a:hover {
 /* Inner Pages */
 
 .bg-hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     url("../img/hero.JPG");
   display: flex;
   justify-content: center;
@@ -511,57 +515,56 @@ footer ul li a:hover {
   justify-content: center;
   padding: 30px 0px;
   text-transform: none;
-  text-align: center;
   padding-top: 100px;
   min-height: 90vh;
   width: 100%;
 }
 .main-content-c {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 0.6fr 1fr 0.7fr;
   flex-wrap: wrap;
   /* align-items: center; */
   justify-content: center;
   flex-direction: row;
-  max-width: 25vw;
+  max-width: 45vw;
   margin-bottom: 5px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   padding: 25px 50px;
 }
 
 .main-content-c div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+  /* display: flex;
+  flex-direction: column; */
+
   font-size: 1.2rem;
+  text-align: left;
 }
 
 .main-content-c div:nth-child(1) {
-  grid-column: 1/5;
+  grid-column: 2/5;
   z-index: 100;
   position: relative;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .main-content-c div:nth-child(2) {
   grid-row: 2/3;
-  grid-column: 1/3;
+  grid-column: 2/4;
 }
 
 .main-content-c div:nth-child(3) {
   grid-row: 2/3;
-  grid-column: 3/5;
+  grid-column: 4/5;
 }
 
 .main-content-c div:nth-child(4) {
-  grid-column: 1/5;
+  grid-column: 1/6;
   font-size: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: red;
 }
 
 .section-d {
@@ -575,6 +578,17 @@ footer ul li a:hover {
   text-align: center;
   padding-top: 100px;
   height: auto;
+}
+
+.section-d img {
+  width: 400px;
+  margin-bottom: 30px;
+}
+.section-d-main-text {
+  max-width: 60%;
+  margin-bottom: 30px;
+  text-align: left;
+  font-size: 1.1rem;
 }
 
 .container-images-d {
@@ -593,6 +607,7 @@ footer ul li a:hover {
   align-items: center;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   padding: 20px;
+  text-align: left;
 }
 .con-ap h2 {
   margin-bottom: 20px;
@@ -643,6 +658,9 @@ footer ul li a:hover {
   grid-row: 2/3;
   grid-column: 1/3;
   font-size: 1.3rem;
+}
+.contact-box ul li {
+  text-align: left;
 }
 .main-content-d .contact-map {
   grid-row: 2/3;
@@ -723,7 +741,6 @@ footer ul li a:hover {
   cursor: pointer;
   min-width: 100px;
   min-height: 100px;
-  border: #000 solid 1px;
 }
 
 .img-ap,
@@ -766,6 +783,13 @@ select:focus {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+}
+
+input[type="date"] {
+  display: block;
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  min-height: 1.2em;
 }
 
 .section-d.contact {
@@ -842,7 +866,34 @@ select {
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1350px) {
+  .main-content-c {
+    max-width: 90vw;
+  }
+  .main-content-d {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+  }
+  .contact-box {
+    margin-bottom: 15px;
+  }
+
+  .container-images div {
+    width: 250px;
+    height: 110px;
+  }
+  .con-ap {
+    width: 95%;
+  }
+  .container-images-d {
+    max-width: 100%;
+  }
+  form {
+    padding: 0;
+  }
+}
+@media screen and (max-width: 767px) {
   .section-inner {
     border-bottom: 75px;
     left: 20px;
@@ -943,32 +994,14 @@ select {
   .con-ap p {
     width: 100%;
   }
-}
-
-@media (max-width: 1350px) {
-  .main-content-c {
-    max-width: 90vw;
-  }
-  .main-content-d {
-    display: flex;
-    flex-direction: column;
-    width: 95%;
-  }
-  .contact-box {
-    margin-bottom: 15px;
-  }
-
-  .container-images div {
-    width: 250px;
-    height: 110px;
-  }
   .con-ap {
     width: 100%;
   }
-  .container-images-d {
-    max-width: 100%;
+  .section-d-main-text {
+    max-width: 80%;
   }
-  form {
-    padding: 0;
+  .section-d img {
+    width: 80vw;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
 }
