--- a/css/style.css
+++ b/css/style.css
@@ -760,11 +760,11 @@ form {
   flex-direction: column;
   font-size: 1.2rem;
 }
-form input {
+/* form input {
   padding: 15px 30px;
   font-size: 1.3rem;
   border: none;
-}
+} */
 
 form h3 {
   margin-bottom: 5px;
