--- a/css/style.css
+++ b/css/style.css
@@ -757,6 +757,7 @@ form {
   padding: 30px;
   font-family: inherit;
   display: flex;
+  align-items: center;
   flex-direction: column;
   font-size: 1.2rem;
 }
