--- a/css/style.css
+++ b/css/style.css
@@ -772,6 +772,7 @@ form {
   align-items: center;
   flex-direction: column;
   font-size: 1.2rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 #apartman {
   margin-top: 10px;
